--- a/hugo/content/en.html
+++ b/hugo/content/en.html
@@ -1,3 +1,3 @@
 <head> 
-    <meta http-equiv="refresh" content="0; url=/" />
+    <meta http-equiv="refresh" content="0; url=https://ansible.puzzle.ch/" />
 </head> 
