--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -12,6 +12,9 @@ linkTitle = "Puzzle Ansible Training"
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Labs <i class="fas fa-flask ml-2"></i>
 	</a>
+  <a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://ansible-slides.puzzle.ch/">
+        Slides <i class="fas fa-chalkboard-teacher ml-2 "></i>
+  </a>
 	<p class="lead mt-5">Show more!</p>
 	{{< blocks/link-down color="info" >}}
 </div>
