--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -17,7 +17,7 @@ linkTitle = "Puzzle Ansible Training"
     </a>
 </div>
 <div class="mx-auto">
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href=""https://www.puzzle.ch/de/ansible target="_blank">
+    <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://www.puzzle.ch/de/ansible/" target="_blank">
         Next Ansible Workshops by Puzzle <i class="fas fa-chalkboard-teacher ml-2 "></i>
     </a>
 </div>
