--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -12,13 +12,18 @@ linkTitle = "Puzzle Ansible Training"
     <a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
         Labs <i class="fas fa-flask ml-2"></i>
     </a>
-    <a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://ansible-slides.puzzle.ch/" target="_blank">
+    <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://ansible-slides.puzzle.ch/" target="_blank">
         Slides <i class="fas fa-chalkboard-teacher ml-2 "></i>
     </a>
 </div>
 <div class="mx-auto">
     <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://www.puzzle.ch/de/ansible/" target="_blank">
-        Next Ansible Workshops by Puzzle <i class="fas fa-chalkboard-teacher ml-2 "></i>
+        Ansible Engineerig <i class="fas fa-chalkboard-teacher ml-2 "></i>
+    </a>
+</div>
+<div class="mx-auto">
+    <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://www.puzzle.ch/de/blog/categories/technologien/ansible" target="_blank">
+        Ansible Blogposts <i class="fas fa-chalkboard-teacher ml-2 "></i>
     </a>
 </div>
 {{< /blocks/cover >}}
