--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -18,7 +18,7 @@ linkTitle = "Puzzle Ansible Training"
 </div>
 <div class="mx-auto">
     <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://www.puzzle.ch/de/ansible/" target="_blank">
-        Ansible Engineerig <i class="fas fa-chalkboard-teacher ml-2 "></i>
+        Ansible Engineering <i class="fas fa-chalkboard-teacher ml-2 "></i>
     </a>
 </div>
 <div class="mx-auto">
