replace main index.html with redirect to docs/

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,34 +1,6 @@
-+++
-title = "Puzzle Ansible Training"
-linkTitle = "Puzzle Ansible Training"
-
-+++
-
-{{< blocks/cover title="Puzzle Ansible Training" image_anchor="top" height="full" color="primary" >}}
-<div class="mx-auto">
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/setup" >}}">
-        Setup <i class="fas fa-cogs ml-2 "></i>
-    </a>
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
-        Labs <i class="fas fa-flask ml-2"></i>
-    </a>
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://ansible-slides.puzzle.ch/" target="_blank">
-        Slides <i class="fas fa-chalkboard-teacher ml-2 "></i>
-    </a>
-</div>
-<div class="mx-auto">
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://www.puzzle.ch/trainings/ansible-we-automate" target="_blank">
-        Next Ansible Workshop <i class="fas fa-chalkboard-teacher ml-2 "></i>
-    </a>
-</div>
-<div class="mx-auto">
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://www.puzzle.ch/de/ansible/" target="_blank">
-        Ansible Engineering <i class="fas fa-chalkboard-teacher ml-2 "></i>
-    </a>
-</div>
-<div class="mx-auto">
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://www.puzzle.ch/blog?terms=eyJ0ZWNobm9sb2d5IjpbMzg3N119" target="_blank">
-        Ansible Blogposts <i class="fas fa-chalkboard-teacher ml-2 "></i>
-    </a>
-</div>
-{{< /blocks/cover >}}
+<!doctype html>
+<html>
+    <head>
+        <meta http-equiv="refresh" content="0; url='https://training.puzzle-itc.de/ansible-labs/docs/'" />
+    </head>
+</html>
