fix fontawesome icons that are not available

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -7,7 +7,7 @@ linkTitle = "Puzzle Ansible Training"
 {{< blocks/cover title="Puzzle Ansible Training" image_anchor="top" height="full" color="primary" >}}
 <div class="mx-auto">
     <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://ansible-slides.puzzle.ch/" target="_blank">
-        Slides <i class="fas fa-person-chalkboard ml-2"></i>
+        Slides <i class="fas fa-chalkboard-teacher ml-2"></i>
     </a>
 </div>
 <div class="mx-auto">
@@ -22,7 +22,7 @@ linkTitle = "Puzzle Ansible Training"
 </div>
 <div class="mx-auto">
     <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://www.puzzle.ch/blog?terms=eyJ0ZWNobm9sb2d5IjpbMzg3N10sImNhdGVnb3J5IjpbMzk4MV19" target="_blank">
-        Ansible Blogposts <i class="fas fa-file-lines ml-2 "></i>
+        Ansible Blogposts <i class="fas fa-book ml-2 "></i>
     </a>
 </div>
 {{< /blocks/cover >}}
