use new tab for labs as well

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -11,7 +11,7 @@ linkTitle = "Puzzle Ansible Training"
     </a>
 </div>
 <div class="mx-auto">
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
+    <a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}"  target="_blank">
         Labs <i class="fas fa-flask ml-2"></i>
     </a>
 </div>
