Update redirect to /ansible/labs/docs/

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Ansible Training - Puzzle ITC</title>
-        <meta http-equiv="refresh" content="0; url='https://training.puzzle-itc.de/ansible-labs/docs/'" />
+        <meta http-equiv="refresh" content="0; url='https://training.puzzle-itc.de/ansible/labs/docs/'" />
     </head>
     <body>
-        <a href="/ansible-labs/docs/">Ansible Training - Labs</a>
+        <a href="/ansible/labs/docs/">Ansible Training - Labs</a>
     </body>
 </html>
